# Qosmit2D

./: CMakeLists.txt  README.md
dependencies/: CMakeLists.txt
src/: defines.hpp  main.cpp
src/Containers/: Vec.hpp
src/ECS/: Component.hpp  Entity.hpp
src/ECS/Systems/: EnemySpanwSystem.cpp  LifespanSystem.cpp  MovementSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  UserInputSystem.cpp  UserInterfaceSystem.cpp
src/Game/: ActorConfigs.hpp  Game.cpp  Game.hpp
src/Utils/: Math.cpp  Math.hpp  Random.hpp
